@@ -32,6 +32,7 @@ x2gokdrive (0.0.0.1-0x2go1) UNRELEASED; urgency=medium
     - improve icon handling in rootless mode.
     - don't show invisible windows.
     - sending KEYRELEASE immediately after KEYPRESS to avoid the "key sticking".
+    - set initial geometry form the -geometry command line option.
 
   [ Mihai Moldovan ]
   * Initial release:
